# codex-mcp-rust

./: .gitignore  Cargo.toml  README.md  install.ps1  install.sh  package.json
.github/workflows/: release.yml
src/: codex.rs  error.rs  main.rs
